2023-08-30T08:22:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6022390452 # 745
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 225 480 / 231 488
* notice: next accum: outdated-unq outdated-all / unq all: 225 480 / 232 489
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-16 2023-08-30]

2023-08-29T16:23:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6014931983 # 743
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-29
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 224 478 / 231 488
* notice: next accum: outdated-unq outdated-all / unq all: 225 480 / 231 488
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-15] / []

2023-08-29T08:22:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6009753618 # 742
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-29
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 224 478 / 230 487
* notice: next accum: outdated-unq outdated-all / unq all: 224 478 / 231 488
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-29]

2023-08-29T01:16:20Z: