@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-30T08:22:17Z",
-  "count_outdated" : 480,
-  "uniques_outdated" : 225,
+  "timestamp" : "2023-08-30T16:23:01Z",
+  "count_outdated" : 482,
+  "uniques_outdated" : 226,
   "count" : 489,
   "uniques" : 232,
   "clones" : [
-    {
-      "timestamp": "2023-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 2,
