@@ -1,3 +1,12 @@
+2023-08-30T16:23:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6027482825 # 746
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 225 480 / 232 489
+* notice: next accum: outdated-unq outdated-all / unq all: 226 482 / 232 489
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-16] / []
+
 2023-08-30T08:22:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6022390452 # 745
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
